Fix horizontal scroll
Since #app-target has a padding of 16px, the added padding to .container of 16px appears to have caused horizontal scroll at times.

--- a/public/layout.css
+++ b/public/layout.css
@@ -16,8 +16,6 @@ html, body, uiview {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
-	padding: 0 var(--containerPadding);
 	margin: 0;
 }
 
